pod_cap_net_raw-allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa-disallowed
  labels:
    owner: me.agilebank.demo
spec:
  containers:
    - name: alpine 
      image: alpine
      args:
       - /bin/sleep
       - "3000"
      securityContext:
        capabilities:
          drop:
            - NET_RAW
      resources:
        limits:
          cpu: "100m"
          memory: "30Mi"
